# VailTools-1

./: .gitignore  .gitmodules  LICENSE.txt  README.md  ci_tools.sh  install.sh  make_docs.sh  pyproject.toml  requirements.txt  run_tests.sh  setup.py  vailtools-gpu.yaml
docs/source/: conf.py  index.rst  modules.rst  vailtools.activations.rst  vailtools.callbacks.rst  vailtools.data.rst  vailtools.evaluation.rst  vailtools.layers.rst  vailtools.losses.rst  vailtools.metrics.rst  vailtools.networks.rst  vailtools.rst
examples/: instance_segmentation.py  plastic_layers.py
scripts/: ci_tools.sh  make_docs.sh  run_tests.sh
tests/: test_snail.py  test_visual_layers.py  test_wave_net.py
tests/test_activations/: test_swish.py
tests/test_callbacks/: test_cyclic_lr.py
tests/test_data/: test_image_tiling.py  test_splits.py
tests/test_layers/: test_coord_conv.py  test_dense_block.py  test_drop_block.py  test_fire_blocks.py  test_fractal_blocks.py  test_global_context.py  test_plastic_layers.py  test_residual.py  test_selective_kernel.py  test_snail.py  test_sparse_block.py  test_squeeze_excite.py  test_visual_layers.py  test_wave_net.py
tests/test_losses/: test_discriminative.py  test_losses.py  test_lovasz.py
tests/test_networks/: test_image2image.py  test_image2vec.py  test_seq2seq.py
vailtools/: __init__.py  callbacks.py  data.py  evaluation.py  losses.py  metrics.py  network_blocks.py  networks.py  utils.py
vailtools/activations/: __init__.py  swish.py
vailtools/callbacks/: __init__.py  cyclic_lr.py
vailtools/data/: __init__.py  generate.py  splits.py  (+1 more)
(+33 files in other folders)
